<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPosterLarge"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_movie_placeholder"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintTop_toTopOf="@id/ivPosterLarge"
            app:layout_constraintBottom_toBottomOf="@id/ivPosterLarge" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:textColor="@color/text_primary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ivPosterLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvMovieInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvMovieInfo" />

        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/tvDescription">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWatchlist"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watchlist_add" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/mark_as_watched" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReview"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/write_review" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvReviewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="Reviews"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/llActions"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/tvReviewsTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>